fixed the scraping issue. added a has_directory_extension. some were getting stuck in an infinite loop and making unnecessary requests

--- a/views/cpanel.erb
+++ b/views/cpanel.erb
@@ -13,11 +13,12 @@
 	<div class="card">
 		<h2>Download file</h2>
 	  <form method="POST" action="/download">
-			<input type="text" name="download" placeholder="Return of the King" />
+			<input type="text" name="file_name" placeholder="Return of the King" />
+			<input type="text" name="file_type" placeholder="Movie" />
 			<input type="submit" value="Find" />
 		</form>
 		<div class="download-response">
-
+			<%= @file_name %>
 		</div>
 	</div>
 </div>
