wrote a wrapper for open-uri to cache responses. need to write timeout functionality

--- a/views/cpanel.erb
+++ b/views/cpanel.erb
@@ -21,4 +21,14 @@
 			<%= @file_name %>
 		</div>
 	</div>
+
+	<div class="card">
+		<h2>Reddit</h2>
+	  <form method="POST" action="/reddit">
+			<input type="submit" value="Reddit" />
+		</form>
+		<div class="download-response">
+			<%= @file_name %>
+		</div>
+	</div>
 </div>
